raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
typedef struct Vector4
{
    float x;
    float y;
    float z;
    float w;
} Vector4;
typedef struct Matrix
{
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Image
{
    void *data;  
    int width;   
    int height;  
    int mipmaps; 
    int format;  
} Image;
typedef struct Texture2D
{
    unsigned int id; 
    int width;       
    int height;      
    int mipmaps;     
    int format;      
} Texture2D;
typedef struct RenderTexture2D
{
    unsigned int id;   
    Texture2D texture; 
    Texture2D depth;   
    bool depthTexture; 
} RenderTexture2D;
typedef struct Camera3D
{
    Vector3 position; 
    Vector3 target;   
    Vector3 up;       
    float fovy;       
    int type;         
} Camera3D;
typedef struct Camera2D
{
    Vector2 offset; 
    Vector2 target; 
    float rotation; 
    float zoom;     
} Camera2D;
typedef struct Ray
{
    Vector3 position;  
    Vector3 direction; 
} Ray;
typedef enum
{
    LOC_VERTEX_POSITION = 0,
    LOC_VERTEX_TEXCOORD01,
    LOC_VERTEX_TEXCOORD02,
    LOC_VERTEX_NORMAL,
    LOC_VERTEX_TANGENT,
    LOC_VERTEX_COLOR,
    LOC_MATRIX_MVP,
    LOC_MATRIX_MODEL,
    LOC_MATRIX_VIEW,
    LOC_MATRIX_PROJECTION,
    LOC_VECTOR_VIEW,
    LOC_COLOR_DIFFUSE,
    LOC_COLOR_SPECULAR,
    LOC_COLOR_AMBIENT,
    LOC_MAP_ALBEDO,    
    LOC_MAP_METALNESS, 
    LOC_MAP_NORMAL,
    LOC_MAP_ROUGHNESS,
    LOC_MAP_OCCLUSION,
    LOC_MAP_EMISSION,
    LOC_MAP_HEIGHT,
    LOC_MAP_CUBEMAP,
    LOC_MAP_IRRADIANCE,
    LOC_MAP_PREFILTER,
    LOC_MAP_BRDF
} ShaderLocationIndex;
typedef enum
{
    UNIFORM_FLOAT = 0,
    UNIFORM_VEC2,
    UNIFORM_VEC3,
    UNIFORM_VEC4,
    UNIFORM_INT,
    UNIFORM_IVEC2,
    UNIFORM_IVEC3,
    UNIFORM_IVEC4,
    UNIFORM_SAMPLER2D
} ShaderUniformDataType;
typedef enum
{
    MAP_ALBEDO = 0,    
    MAP_METALNESS = 1, 
    MAP_NORMAL = 2,
    MAP_ROUGHNESS = 3,
    MAP_OCCLUSION,
    MAP_EMISSION,
    MAP_HEIGHT,
    MAP_CUBEMAP,    
    MAP_IRRADIANCE, 
    MAP_PREFILTER,  
    MAP_BRDF
} TexmapIndex;
typedef enum
{
    UNCOMPRESSED_GRAYSCALE = 1, 
    UNCOMPRESSED_GRAY_ALPHA,    
    UNCOMPRESSED_R5G6B5,        
    UNCOMPRESSED_R8G8B8,        
    UNCOMPRESSED_R5G5B5A1,      
    UNCOMPRESSED_R4G4B4A4,      
    UNCOMPRESSED_R8G8B8A8,      
    UNCOMPRESSED_R32,           
    UNCOMPRESSED_R32G32B32,     
    UNCOMPRESSED_R32G32B32A32,  
    COMPRESSED_DXT1_RGB,        
    COMPRESSED_DXT1_RGBA,       
    COMPRESSED_DXT3_RGBA,       
    COMPRESSED_DXT5_RGBA,       
    COMPRESSED_ETC1_RGB,        
    COMPRESSED_ETC2_RGB,        
    COMPRESSED_ETC2_EAC_RGBA,   
    COMPRESSED_PVRT_RGB,        
    COMPRESSED_PVRT_RGBA,       
    COMPRESSED_ASTC_4x4_RGBA,   
    COMPRESSED_ASTC_8x8_RGBA    
} PixelFormat;
typedef enum
{
    FILTER_POINT = 0,       
    FILTER_BILINEAR,        
    FILTER_TRILINEAR,       
    FILTER_ANISOTROPIC_4X,  
    FILTER_ANISOTROPIC_8X,  
    FILTER_ANISOTROPIC_16X, 
} TextureFilterMode;
typedef enum
{
    WRAP_REPEAT = 0,    
    WRAP_CLAMP,         
    WRAP_MIRROR_REPEAT, 
    WRAP_MIRROR_CLAMP   
} TextureWrapMode;
typedef enum
{
    FONT_DEFAULT = 0, 
    FONT_BITMAP,      
    FONT_SDF          
} FontType;
typedef enum
{
    BLEND_ALPHA = 0, 
    BLEND_ADDITIVE,  
    BLEND_MULTIPLIED 
} BlendMode;
typedef enum
{
    GESTURE_NONE = 0,
    GESTURE_TAP = 1,
    GESTURE_DOUBLETAP = 2,
    GESTURE_HOLD = 4,
    GESTURE_DRAG = 8,
    GESTURE_SWIPE_RIGHT = 16,
    GESTURE_SWIPE_LEFT = 32,
    GESTURE_SWIPE_UP = 64,
    GESTURE_SWIPE_DOWN = 128,
    GESTURE_PINCH_IN = 256,
    GESTURE_PINCH_OUT = 512
} GestureType;
typedef enum
{
    CAMERA_CUSTOM = 0,
    CAMERA_FREE,
    CAMERA_ORBITAL,
    CAMERA_FIRST_PERSON,
    CAMERA_THIRD_PERSON
} CameraMode;
typedef enum
{
    CAMERA_PERSPECTIVE = 0,
    CAMERA_ORTHOGRAPHIC
} CameraType;
typedef enum
{
    HMD_DEFAULT_DEVICE = 0,
    HMD_OCULUS_RIFT_DK2,
    HMD_OCULUS_RIFT_CV1,
    HMD_OCULUS_GO,
    HMD_VALVE_HTC_VIVE,
    HMD_SONY_PSVR
} VrDeviceType;
typedef enum
{
    NPT_9PATCH = 0,       
    NPT_3PATCH_VERTICAL,  
    NPT_3PATCH_HORIZONTAL 
} NPatchType;
typedef void (*TraceLogCallback)(int logType, const char *text, va_list args);
    RLAPI void InitWindow(int width, int height, const char *title); 
    RLAPI bool WindowShouldClose(void);                              
    RLAPI void CloseWindow(void);                                    
    RLAPI bool IsWindowReady(void);                                  
    RLAPI bool IsWindowMinimized(void);                              
    RLAPI bool IsWindowHidden(void);                                 
    RLAPI void ToggleFullscreen(void);                               
    RLAPI void UnhideWindow(void);                                   
    RLAPI void HideWindow(void);                                     
    RLAPI void SetWindowIcon(Image image);                           
    RLAPI void SetWindowTitle(const char *title);                    
    RLAPI void SetWindowPosition(int x, int y);                      
    RLAPI void SetWindowMonitor(int monitor);                        
    RLAPI void SetWindowMinSize(int width, int height);              
    RLAPI void SetWindowSize(int width, int height);                 
    RLAPI void *GetWindowHandle(void);                               
    RLAPI int GetScreenWidth(void);                                  
    RLAPI int GetScreenHeight(void);                                 
    RLAPI int GetMonitorCount(void);                                 
    RLAPI int GetMonitorWidth(int monitor);                          
    RLAPI int GetMonitorHeight(int monitor);                         
    RLAPI int GetMonitorPhysicalWidth(int monitor);                  
    RLAPI int GetMonitorPhysicalHeight(int monitor);                 
    RLAPI const char *GetMonitorName(int monitor);                   
    RLAPI void ShowCursor(void);     
    RLAPI void HideCursor(void);     
    RLAPI bool IsCursorHidden(void); 
    RLAPI void EnableCursor(void);   
    RLAPI void DisableCursor(void);  
    RLAPI void ClearBackground(Color color);             
    RLAPI void BeginDrawing(void);                       
    RLAPI void EndDrawing(void);                         
    RLAPI void BeginMode2D(Camera2D camera);             
    RLAPI void EndMode2D(void);                          
    RLAPI void BeginMode3D(Camera3D camera);             
    RLAPI void EndMode3D(void);                          
    RLAPI void BeginTextureMode(RenderTexture2D target); 
    RLAPI void EndTextureMode(void);                     
    RLAPI Ray GetMouseRay(Vector2 mousePosition, Camera camera);     
    RLAPI Vector2 GetWorldToScreen(Vector3 position, Camera camera); 
    RLAPI Matrix GetCameraMatrix(Camera camera);                     
    RLAPI void SetTargetFPS(int fps); 
    RLAPI int GetFPS(void);           
    RLAPI float GetFrameTime(void);   
    RLAPI double GetTime(void);       
    RLAPI int ColorToInt(Color color);          
    RLAPI Vector4 ColorNormalize(Color color);  
    RLAPI Vector3 ColorToHSV(Color color);      
    RLAPI Color ColorFromHSV(Vector3 hsv);      
    RLAPI Color GetColor(int hexValue);         
    RLAPI Color Fade(Color color, float alpha); 
    RLAPI void SetConfigFlags(unsigned char flags);            
    RLAPI void SetTraceLogLevel(int logType);                  
    RLAPI void SetTraceLogCallback(TraceLogCallback callback); 
    RLAPI void TraceLog(int logType, const char *text, ...);   
    RLAPI void TakeScreenshot(const char *fileName);           
    RLAPI int GetRandomValue(int min, int max);                
    RLAPI bool FileExists(const char *fileName);                       
    RLAPI bool IsFileExtension(const char *fileName, const char *ext); 
    RLAPI const char *GetExtension(const char *fileName);              