raylib-sys/bindings_web.rs

pub mod ShaderLocationIndex {
    pub type Type = u32;
    pub const LOC_VERTEX_POSITION: Type = 0;
    pub const LOC_VERTEX_TEXCOORD01: Type = 1;
    pub const LOC_VERTEX_TEXCOORD02: Type = 2;
    pub const LOC_VERTEX_NORMAL: Type = 3;
    pub const LOC_VERTEX_TANGENT: Type = 4;
    pub const LOC_VERTEX_COLOR: Type = 5;
    pub const LOC_MATRIX_MVP: Type = 6;
    pub const LOC_MATRIX_MODEL: Type = 7;
    pub const LOC_MATRIX_VIEW: Type = 8;
    pub const LOC_MATRIX_PROJECTION: Type = 9;
    pub const LOC_VECTOR_VIEW: Type = 10;
    pub const LOC_COLOR_DIFFUSE: Type = 11;
    pub const LOC_COLOR_SPECULAR: Type = 12;
    pub const LOC_COLOR_AMBIENT: Type = 13;
    pub const LOC_MAP_ALBEDO: Type = 14;
    pub const LOC_MAP_METALNESS: Type = 15;
    pub const LOC_MAP_NORMAL: Type = 16;
    pub const LOC_MAP_ROUGHNESS: Type = 17;
    pub const LOC_MAP_OCCLUSION: Type = 18;
    pub const LOC_MAP_EMISSION: Type = 19;
    pub const LOC_MAP_HEIGHT: Type = 20;
    pub const LOC_MAP_CUBEMAP: Type = 21;
    pub const LOC_MAP_IRRADIANCE: Type = 22;
    pub const LOC_MAP_PREFILTER: Type = 23;
    pub const LOC_MAP_BRDF: Type = 24;
}
pub mod ShaderUniformDataType {
    pub type Type = u32;
    pub const UNIFORM_FLOAT: Type = 0;
    pub const UNIFORM_VEC2: Type = 1;
    pub const UNIFORM_VEC3: Type = 2;
    pub const UNIFORM_VEC4: Type = 3;
    pub const UNIFORM_INT: Type = 4;
    pub const UNIFORM_IVEC2: Type = 5;
    pub const UNIFORM_IVEC3: Type = 6;
    pub const UNIFORM_IVEC4: Type = 7;
    pub const UNIFORM_SAMPLER2D: Type = 8;
}
pub mod TexmapIndex {
    pub type Type = u32;
    pub const MAP_ALBEDO: Type = 0;
    pub const MAP_METALNESS: Type = 1;
    pub const MAP_NORMAL: Type = 2;
    pub const MAP_ROUGHNESS: Type = 3;
    pub const MAP_OCCLUSION: Type = 4;
    pub const MAP_EMISSION: Type = 5;
    pub const MAP_HEIGHT: Type = 6;
    pub const MAP_CUBEMAP: Type = 7;
    pub const MAP_IRRADIANCE: Type = 8;
    pub const MAP_PREFILTER: Type = 9;
    pub const MAP_BRDF: Type = 10;
}
pub mod PixelFormat {
    pub type Type = u32;
    pub const UNCOMPRESSED_GRAYSCALE: Type = 1;
    pub const UNCOMPRESSED_GRAY_ALPHA: Type = 2;
    pub const UNCOMPRESSED_R5G6B5: Type = 3;
    pub const UNCOMPRESSED_R8G8B8: Type = 4;
    pub const UNCOMPRESSED_R5G5B5A1: Type = 5;
    pub const UNCOMPRESSED_R4G4B4A4: Type = 6;
    pub const UNCOMPRESSED_R8G8B8A8: Type = 7;
    pub const UNCOMPRESSED_R32: Type = 8;
    pub const UNCOMPRESSED_R32G32B32: Type = 9;
    pub const UNCOMPRESSED_R32G32B32A32: Type = 10;
    pub const COMPRESSED_DXT1_RGB: Type = 11;
    pub const COMPRESSED_DXT1_RGBA: Type = 12;
    pub const COMPRESSED_DXT3_RGBA: Type = 13;
    pub const COMPRESSED_DXT5_RGBA: Type = 14;
    pub const COMPRESSED_ETC1_RGB: Type = 15;
    pub const COMPRESSED_ETC2_RGB: Type = 16;
    pub const COMPRESSED_ETC2_EAC_RGBA: Type = 17;
    pub const COMPRESSED_PVRT_RGB: Type = 18;
    pub const COMPRESSED_PVRT_RGBA: Type = 19;
    pub const COMPRESSED_ASTC_4x4_RGBA: Type = 20;
    pub const COMPRESSED_ASTC_8x8_RGBA: Type = 21;
}
pub mod TextureFilterMode {
    pub type Type = u32;
    pub const FILTER_POINT: Type = 0;
    pub const FILTER_BILINEAR: Type = 1;
    pub const FILTER_TRILINEAR: Type = 2;
    pub const FILTER_ANISOTROPIC_4X: Type = 3;
    pub const FILTER_ANISOTROPIC_8X: Type = 4;
    pub const FILTER_ANISOTROPIC_16X: Type = 5;
}
pub mod TextureWrapMode {
    pub type Type = u32;
    pub const WRAP_REPEAT: Type = 0;
    pub const WRAP_CLAMP: Type = 1;
    pub const WRAP_MIRROR_REPEAT: Type = 2;
    pub const WRAP_MIRROR_CLAMP: Type = 3;
}
pub mod FontType {
    pub type Type = u32;
    pub const FONT_DEFAULT: Type = 0;
    pub const FONT_BITMAP: Type = 1;
    pub const FONT_SDF: Type = 2;
}
pub mod BlendMode {
    pub type Type = u32;
    pub const BLEND_ALPHA: Type = 0;
    pub const BLEND_ADDITIVE: Type = 1;
    pub const BLEND_MULTIPLIED: Type = 2;
}
pub mod GestureType {
    pub type Type = u32;
    pub const GESTURE_NONE: Type = 0;
    pub const GESTURE_TAP: Type = 1;
    pub const GESTURE_DOUBLETAP: Type = 2;
    pub const GESTURE_HOLD: Type = 4;
    pub const GESTURE_DRAG: Type = 8;
    pub const GESTURE_SWIPE_RIGHT: Type = 16;
    pub const GESTURE_SWIPE_LEFT: Type = 32;
    pub const GESTURE_SWIPE_UP: Type = 64;
    pub const GESTURE_SWIPE_DOWN: Type = 128;
    pub const GESTURE_PINCH_IN: Type = 256;
    pub const GESTURE_PINCH_OUT: Type = 512;
}
pub mod CameraMode {
    pub type Type = u32;
    pub const CAMERA_CUSTOM: Type = 0;
    pub const CAMERA_FREE: Type = 1;
    pub const CAMERA_ORBITAL: Type = 2;
    pub const CAMERA_FIRST_PERSON: Type = 3;
    pub const CAMERA_THIRD_PERSON: Type = 4;
}
pub mod CameraType {
    pub type Type = u32;
    pub const CAMERA_PERSPECTIVE: Type = 0;
    pub const CAMERA_ORTHOGRAPHIC: Type = 1;
}
pub mod VrDeviceType {
    pub type Type = u32;
    pub const HMD_DEFAULT_DEVICE: Type = 0;
    pub const HMD_OCULUS_RIFT_DK2: Type = 1;
    pub const HMD_OCULUS_RIFT_CV1: Type = 2;
    pub const HMD_OCULUS_GO: Type = 3;
    pub const HMD_VALVE_HTC_VIVE: Type = 4;
    pub const HMD_SONY_PSVR: Type = 5;
}
pub mod NPatchType {
    pub type Type = u32;
    pub const NPT_9PATCH: Type = 0;
    pub const NPT_3PATCH_VERTICAL: Type = 1;
    pub const NPT_3PATCH_HORIZONTAL: Type = 2;
}
pub type TraceLogCallback = ::std::option::Option<
    unsafe extern "C" fn(
        msgType: ::std::os::raw::c_int,
        text: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
    ),
>;
extern "C" {
    #[link_name = "InitWindow"]
    pub fn InitWindow(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        title: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    #[link_name = "WindowShouldClose"]
    pub fn WindowShouldClose() -> bool;
}
extern "C" {
    #[link_name = "CloseWindow"]
    pub fn CloseWindow();
}
extern "C" {
    #[link_name = "IsWindowReady"]
    pub fn IsWindowReady() -> bool;
}
extern "C" {
    #[link_name = "IsWindowMinimized"]
    pub fn IsWindowMinimized() -> bool;
}
extern "C" {
    #[link_name = "IsWindowHidden"]
    pub fn IsWindowHidden() -> bool;
}
extern "C" {
    #[link_name = "ToggleFullscreen"]
    pub fn ToggleFullscreen();
}
extern "C" {
    #[link_name = "UnhideWindow"]
    pub fn UnhideWindow();
}
extern "C" {
    #[link_name = "HideWindow"]
    pub fn HideWindow();
}
extern "C" {
    #[link_name = "SetWindowIcon"]
    pub fn SetWindowIcon(image: Image);
}
extern "C" {
    #[link_name = "SetWindowTitle"]
    pub fn SetWindowTitle(title: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "SetWindowPosition"]
    pub fn SetWindowPosition(x: ::std::os::raw::c_int, y: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetWindowMonitor"]
    pub fn SetWindowMonitor(monitor: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetWindowMinSize"]
    pub fn SetWindowMinSize(width: ::std::os::raw::c_int, height: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetWindowSize"]
    pub fn SetWindowSize(width: ::std::os::raw::c_int, height: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "GetWindowHandle"]
    pub fn GetWindowHandle() -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[link_name = "GetScreenWidth"]
    pub fn GetScreenWidth() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetScreenHeight"]
    pub fn GetScreenHeight() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetMonitorCount"]
    pub fn GetMonitorCount() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetMonitorWidth"]
    pub fn GetMonitorWidth(monitor: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetMonitorHeight"]
    pub fn GetMonitorHeight(monitor: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetMonitorPhysicalWidth"]
    pub fn GetMonitorPhysicalWidth(monitor: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetMonitorPhysicalHeight"]
    pub fn GetMonitorPhysicalHeight(monitor: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetMonitorName"]
    pub fn GetMonitorName(monitor: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "ShowCursor"]
    pub fn ShowCursor();
}
extern "C" {
    #[link_name = "HideCursor"]
    pub fn HideCursor();
}
extern "C" {
    #[link_name = "IsCursorHidden"]
    pub fn IsCursorHidden() -> bool;
}
extern "C" {
    #[link_name = "EnableCursor"]
    pub fn EnableCursor();
}
extern "C" {
    #[link_name = "DisableCursor"]
    pub fn DisableCursor();
}
extern "C" {
    #[link_name = "ClearBackground"]
    pub fn ClearBackground(color: Color);
}
extern "C" {
    #[link_name = "BeginDrawing"]
    pub fn BeginDrawing();
}
extern "C" {
    #[link_name = "EndDrawing"]
    pub fn EndDrawing();
}
extern "C" {
    #[link_name = "BeginMode2D"]
    pub fn BeginMode2D(camera: Camera2D);
}
extern "C" {
    #[link_name = "EndMode2D"]
    pub fn EndMode2D();
}
extern "C" {
    #[link_name = "BeginMode3D"]
    pub fn BeginMode3D(camera: Camera3D);
}
extern "C" {
    #[link_name = "EndMode3D"]
    pub fn EndMode3D();
}
extern "C" {
    #[link_name = "BeginTextureMode"]
    pub fn BeginTextureMode(target: RenderTexture2D);
}
extern "C" {
    #[link_name = "EndTextureMode"]
    pub fn EndTextureMode();
}
extern "C" {
    #[link_name = "GetMouseRay"]
    pub fn GetMouseRay(mousePosition: Vector2, camera: Camera3D) -> Ray;
}
extern "C" {
    #[link_name = "GetWorldToScreen"]
    pub fn GetWorldToScreen(position: Vector3, camera: Camera3D) -> Vector2;
}
extern "C" {
    #[link_name = "GetCameraMatrix"]
    pub fn GetCameraMatrix(camera: Camera3D) -> Matrix;
}
extern "C" {
    #[link_name = "SetTargetFPS"]
    pub fn SetTargetFPS(fps: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "GetFPS"]
    pub fn GetFPS() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetFrameTime"]
    pub fn GetFrameTime() -> f32;
}
extern "C" {
    #[link_name = "GetTime"]
    pub fn GetTime() -> f64;
}
extern "C" {
    #[link_name = "ColorToInt"]
    pub fn ColorToInt(color: Color) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "ColorNormalize"]
    pub fn ColorNormalize(color: Color) -> Vector4;
}
extern "C" {
    #[link_name = "ColorToHSV"]
    pub fn ColorToHSV(color: Color) -> Vector3;
}
extern "C" {
    #[link_name = "ColorFromHSV"]
    pub fn ColorFromHSV(hsv: Vector3) -> Color;
}
extern "C" {
    #[link_name = "GetColor"]
    pub fn GetColor(hexValue: ::std::os::raw::c_int) -> Color;
}
extern "C" {
    #[link_name = "Fade"]
    pub fn Fade(color: Color, alpha: f32) -> Color;
}
extern "C" {
    #[link_name = "SetConfigFlags"]
    pub fn SetConfigFlags(flags: ::std::os::raw::c_uchar);
}
extern "C" {
    #[link_name = "SetTraceLogLevel"]
    pub fn SetTraceLogLevel(types: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetTraceLogCallback"]
    pub fn SetTraceLogCallback(callback: TraceLogCallback);
}
extern "C" {
    #[link_name = "TraceLog"]
    pub fn TraceLog(logType: ::std::os::raw::c_int, text: *const ::std::os::raw::c_char, ...);
}
extern "C" {
    #[link_name = "TakeScreenshot"]
    pub fn TakeScreenshot(fileName: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "GetRandomValue"]
    pub fn GetRandomValue(
        min: ::std::os::raw::c_int,
        max: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "FileExists"]
    pub fn FileExists(fileName: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    #[link_name = "IsFileExtension"]
    pub fn IsFileExtension(
        fileName: *const ::std::os::raw::c_char,
        ext: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    #[link_name = "GetExtension"]
    pub fn GetExtension(fileName: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char;
}
